--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="icon" href="./images/favicon.ico" />
 	<script src="./js/jquery.min.js" type="text/javascript"></script>
 	<script src="./js/config.js" type="text/javascript"></script>
+	<script src="./js/ga.js" type="text/javascript" async></script>
 	<!-- <script src="./js/skel.min.js" type="text/javascript"></script> -->
 	<!-- <script src="./js/jquery.flexslider.js" type="text/javascript" async></script> -->
 </head>
