fix form transitions add email script to source control

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 			<div class="grid grid-pad">
 				<div class="col-1-1"><h3>CONTACT</h3></div>
 				<div class="col-1-1">
+					<div class="formconfirmation transparent"><div>Thank you for contacting us.</div></div>
 					<div class="formcontainer">
 						<form class="form">
 						<!-- <form method="post"> -->
@@ -128,7 +129,6 @@
 						<!-- </form> -->
 						</form>
 					</div>
-					<div class="formconfirmation transparent">Thank you for contacting us.</div>
 				</div>
 			</div>
 		</article>
