proportions changed as per Rami's request

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<div class="grid grid-pad">
 				<div class="col-1-1">
 					<h3>Transforming the way commercial real estate is bought and sold</h3>
-					<p>RealPlace reduces the searching and transaction costs associated with commercial real estate investments through the creation of an​ online marketplace that connects sellers with suitable buyers</p>
+					<p>RealPlace <span class="u">reduces the searching and transaction costs</span> associated with commercial real estate investments through the creation of an​ online marketplace that connects sellers with suitable buyers</p>
 				</div>
 			</div>
 		</article>
